--- a/AngleNet2/ClientApp/app/components/home/home.component.html
+++ b/AngleNet2/ClientApp/app/components/home/home.component.html
@@ -1,12 +1,13 @@
 <h1>Hello, world!</h1>
 <p>Here is the AngleNet scraper - a .NET/Angular app</p>
+The Wiki lives here: <a href="https://github.com/webpropopuli/AngleNet/wiki">Scraper Wiki</a>
 <ul>
     <li><a href='https://get.asp.net/'>ASP.NET Core</a> and <a href='https://msdn.microsoft.com/en-us/library/67ef8sbd.aspx'>C#</a> for cross-platform server-side code</li>
     <li><a href='https://angular.io/'>Angular</a> and <a href='http://www.typescriptlang.org/'>TypeScript</a> for client-side code</li>
     <li><a href='https://webpack.github.io/'>Webpack</a> for building and bundling client-side resources</li>
 
 </ul>
-<p>To help you get started, we've also set up:</p>
+<p>Some notes</p>
 <ul>
     <li><strong>Client-side navigation</strong>. 
         For example, click <em>Counter</em> then <em>Back</em> to return here.</li>
